change rank font size, make non-selected lines bit more visible. fix opacity bug

--- a/less/style.less
+++ b/less/style.less
@@ -39,7 +39,7 @@ body {
 	font-family: 'Source Sans Pro', sans-serif;
 }
 
-.horse {
+.horse, .rank-number, .end.circle, .name {
 	transition: 200ms opacity;
 }
 
